[package]
name = "multipart-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple, zero-allocation, streaming, async multipart reader & writer for Rust"
repository = "https://www.github.com/feliwir/multipart-rs"
keywords = ["multipart", "http", "async", "streaming", "zero-allocation"]
categories = ["web-programming", "asynchronous", "http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
memchr = "2.7.1"
mime = "0.3.17"

[dev-dependencies]
futures-test = "0.3.30"
